package ca.mcmaster.cas.se2aa4.a4.pathfinder.Exceptions;

public class IdAlreadyExists extends Exception {
    public IdAlreadyExists() {
        super();
    }

    public IdAlreadyExists(String message) {
        super(message);
    }
}
