package ca.mcmaster.cas.se2aa4.a4.pathfinder.Exceptions;

public class NoSuchNodeExists extends Exception {
    public NoSuchNodeExists() {
        super();
    }

    public NoSuchNodeExists(String message) {
        super(message);
    }
}
